# estrutura-de-dados

atividade avaliativa/: Q1.c  Q2.c  biblioteca.h
aula01/: CMakeLists.txt  ex01.c  ex02.c
duplamente encadeada/: Q1.c
estudando pra primeira prova/: q1.c  q2.c  q3.c  q4.c  q5.c  q6.c  q7.c
